# ABS.SDK.C

clients/accountingService/: CMakeLists.txt  README.md
clients/accountingService/.openapi-generator/: FILES
clients/accountingService/api/: AccountGroupsAPI.c  AccountGroupsAPI.h  AccountingPeriodsAPI.c  AccountingPeriodsAPI.h  AccountsAPI.c  AccountsAPI.h  BankingAPI.c  BankingAPI.h  BillingProfilesAPI.c  BillingProfilesAPI.h  BudgetsAPI.c  BudgetsAPI.h  CommissionsAPI.c  CommissionsAPI.h  CostCentresAPI.c  CostCentresAPI.h  FinancialBooksAPI.c  FinancialBooksAPI.h  FiscalAuthoritiesAPI.c  FiscalAuthoritiesAPI.h  FiscalAuthorityYearsAPI.c  FiscalAuthorityYearsAPI.h  FiscalEnumerationRangesAPI.c  FiscalEnumerationRangesAPI.h  FiscalIdentificationTypesAPI.c  FiscalIdentificationTypesAPI.h  FiscalPeriodsAPI.c  FiscalPeriodsAPI.h  FiscalRegimesAPI.c  FiscalRegimesAPI.h  FiscalResponsibilitiesAPI.c  FiscalResponsibilitiesAPI.h  FiscalResponsibilityRecordsAPI.c  FiscalResponsibilityRecordsAPI.h  FiscalYearsAPI.c  FiscalYearsAPI.h  GrantsAPI.c  GrantsAPI.h  InvoiceEnumerationRangesAPI.c  InvoiceEnumerationRangesAPI.h  (+20 more)
clients/accountingService/docs/: AccountGroupsAPI.md  AccountingPeriodsAPI.md  AccountsAPI.md  BankingAPI.md  BillingProfilesAPI.md  BudgetsAPI.md  CommissionsAPI.md  CostCentresAPI.md  FinancialBooksAPI.md  FiscalAuthoritiesAPI.md  FiscalAuthorityYearsAPI.md  FiscalEnumerationRangesAPI.md  FiscalIdentificationTypesAPI.md  FiscalPeriodsAPI.md  FiscalRegimesAPI.md  FiscalResponsibilitiesAPI.md  FiscalResponsibilityRecordsAPI.md  FiscalYearsAPI.md  GrantsAPI.md  InvoiceEnumerationRangesAPI.md  JournalTypesAPI.md  JournalsAPI.md  LedgerTypesAPI.md  LedgersAPI.md  LoansAPI.md  ReceiptsAPI.md  SharesAPI.md  TaxPoliciesAPI.md  TaxRatesAPI.md  TransactionsAPI.md  account_create_dto.md  account_dto.md  account_dto_envelope.md  account_dto_list_envelope.md  account_group_create_dto.md  account_group_dto.md  account_group_dto_envelope.md  account_group_dto_list_envelope.md  account_group_update_dto.md  account_relation_create_dto.md  (+219 more)
clients/accountingService/model/: account_create_dto.c  account_create_dto.h  account_dto.c  account_dto.h  account_dto_envelope.c  account_dto_envelope.h  account_dto_list_envelope.c  account_dto_list_envelope.h  account_group_create_dto.c  account_group_create_dto.h  account_group_dto.c  account_group_dto.h  account_group_dto_envelope.c  account_group_dto_envelope.h  account_group_dto_list_envelope.c  account_group_dto_list_envelope.h  account_group_update_dto.c  account_group_update_dto.h  account_relation_create_dto.c  account_relation_create_dto.h  account_relation_dto.c  account_relation_dto.h  account_relation_dto_list_envelope.c  account_relation_dto_list_envelope.h  account_relation_update_dto.c  account_relation_update_dto.h  account_type_create_dto.c  account_type_create_dto.h  account_type_dto.c  account_type_dto.h  account_type_dto_list_envelope.c  account_type_dto_list_envelope.h  account_type_update_dto.c  account_type_update_dto.h  account_update_dto.c  account_update_dto.h  accounting_entry_create_dto.c  accounting_entry_create_dto.h  accounting_entry_dto.c  accounting_entry_dto.h  (+419 more)
clients/accountingService/unit-test/: test_account_create_dto.c  test_account_dto.c  test_account_dto_envelope.c  test_account_dto_list_envelope.c  test_account_group_create_dto.c  test_account_group_dto.c  test_account_group_dto_envelope.c  test_account_group_dto_list_envelope.c  test_account_group_update_dto.c  test_account_relation_create_dto.c  test_account_relation_dto.c  test_account_relation_dto_list_envelope.c  test_account_relation_update_dto.c  test_account_type_create_dto.c  test_account_type_dto.c  test_account_type_dto_list_envelope.c  test_account_type_update_dto.c  test_account_update_dto.c  test_accounting_entry_create_dto.c  test_accounting_entry_dto.c  test_accounting_entry_dto_envelope.c  test_accounting_entry_dto_list_envelope.c  test_accounting_entry_update_dto.c  test_accounting_period_create_dto.c  test_accounting_period_dto.c  test_accounting_period_dto_envelope.c  test_accounting_period_dto_list_envelope.c  test_accounting_period_update_dto.c  test_applied_tax_policy_record_create_dto.c  test_applied_tax_policy_record_dto.c  test_applied_tax_policy_record_dto_envelope.c  test_applied_tax_policy_record_dto_list_envelope.c  test_applied_tax_policy_record_update_dto.c  test_bank_account_create_dto.c  test_bank_account_dto.c  test_bank_account_dto_envelope.c  test_bank_account_dto_list_envelope.c  test_bank_account_update_dto.c  test_bank_create_dto.c  test_bank_dto.c  (+190 more)
clients/catalogService/: CMakeLists.txt  README.md
clients/catalogService/.openapi-generator/: FILES
clients/catalogService/api/: ItemAttachmentsAPI.c  ItemAttachmentsAPI.h  ItemAttributesAPI.c  ItemAttributesAPI.h  ItemBrandsAPI.c  ItemBrandsAPI.h  ItemCategoriesAPI.c  ItemCategoriesAPI.h  ItemGoogleCategoriesAPI.c  ItemGoogleCategoriesAPI.h  ItemImagesAPI.c  ItemImagesAPI.h  ItemQuestionsAPI.c  ItemQuestionsAPI.h  ItemRefundPoliciesAPI.c  ItemRefundPoliciesAPI.h  ItemReturnPoliciesAPI.c  ItemReturnPoliciesAPI.h  ItemReviewsAPI.c  ItemReviewsAPI.h  ItemShippingPoliciesAPI.c  ItemShippingPoliciesAPI.h  ItemTagsAPI.c  ItemTagsAPI.h  ItemTaxPoliciesAPI.c  ItemTaxPoliciesAPI.h  ItemTypesAPI.c  ItemTypesAPI.h  ItemWarrantyPoliciesAPI.c  ItemWarrantyPoliciesAPI.h  ItemsAPI.c  ItemsAPI.h  MerchantsAPI.c  MerchantsAPI.h  PricingRulesAPI.c  PricingRulesAPI.h
clients/catalogService/docs/: ItemAttachmentsAPI.md  ItemAttributesAPI.md  ItemBrandsAPI.md  ItemCategoriesAPI.md  ItemGoogleCategoriesAPI.md  ItemImagesAPI.md  ItemQuestionsAPI.md  ItemRefundPoliciesAPI.md  ItemReturnPoliciesAPI.md  ItemReviewsAPI.md  ItemShippingPoliciesAPI.md  ItemTagsAPI.md  ItemTaxPoliciesAPI.md  ItemTypesAPI.md  ItemWarrantyPoliciesAPI.md  ItemsAPI.md  MerchantsAPI.md  PricingRulesAPI.md  (+84 more)
clients/contentService/: CMakeLists.txt  README.md
clients/learningService/: CMakeLists.txt  README.md
clients/systemService/: CMakeLists.txt  README.md
clients/tenantsService/: CMakeLists.txt  README.md
(+4278 files in other folders)
